--- a/conf/ar.com.smg.esb.sybaseProperties.cfg
+++ b/conf/ar.com.smg.esb.sybaseProperties.cfg
@@ -7,10 +7,16 @@ sybaseApplicationName=MobileBak-OpenShift
 #GPS_SMG
 
 #DEV
-gps.url=jdbc:sybase:Tds:192.168.105.235:4100/gps_smg?ApplicationName=MobileBak-OpenShift
+gps.url=jdbc:sybase:Tds:192.168.105.235:4100/gps_smg_os?ApplicationName=MobileBak-OpenShift
 
-gps.databaseName=gps_smg
+gps.databaseName=gps_smg_os
 gps.username=svc_gps
 gps.password=svcgpsdev12
 gps.datasource.jndi.name=osgi:service/javax.sql.DataSource/(osgi.jndi.service.name=jdbc/gpsSpringXADS)
 
+
+#PRESTACI
+prestaci.url=jdbc:sybase:Tds:192.168.105.235:4100/prestaci?ApplicationName=MobileSec-OpenShift
+prestaci.databaseName=prestaci
+prestaci.username=crm_app
+prestaci.password=sybaseep
