--- a/pom.xml
+++ b/pom.xml
@@ -183,7 +183,12 @@
             <artifactId>asm</artifactId>
             <version>1.0.2</version>
         </dependency>
-
+<!-- https://mvnrepository.com/artifact/com.nimbusds/nimbus-jose-jwt -->
+	<dependency>
+	    <groupId>com.nimbusds</groupId>
+	    <artifactId>nimbus-jose-jwt</artifactId>
+	    <version>5.0</version>
+	</dependency>
         
     </dependencies>
     <repositories>
