--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,7 @@
                 <dependency>
                     <groupId>com.atomikos</groupId>
                     <artifactId>transactions-jdbc</artifactId>
-                    <version>3.9.1</version>
+                    <version>3.9.3</version>
                 </dependency>
             <!-- https://mvnrepository.com/artifact/org.springframework/spring-jdbc -->
             <dependency>
@@ -42,17 +42,17 @@
                 <dependency>
                     <groupId>com.atomikos</groupId>
                     <artifactId>transactions-jta</artifactId>
-                    <version>3.9.1</version>
+                    <version>3.9.3</version>
                 </dependency>
                 <dependency>
                     <groupId>com.atomikos</groupId>
                     <artifactId>atomikos-util</artifactId>
-                    <version>3.9.1</version>
+                    <version>3.9.3</version>
                 </dependency>
                 <dependency>
                     <groupId>com.atomikos</groupId>
                     <artifactId>transactions-osgi</artifactId>
-                    <version>3.9.1</version>
+                    <version>3.9.3</version>
                 </dependency>
                 <!-- https://mvnrepository.com/artifact/commons-dbcp/commons-dbcp -->
                 <dependency>
@@ -120,6 +120,84 @@
                     <artifactId>jackson-mapper-asl</artifactId>
                     <version>1.9.0</version>
                 </dependency>
+		<!-- https://mvnrepository.com/artifact/org.codehaus.jackson/jackson-core-asl -->
+		<dependency>
+		    <groupId>org.codehaus.jackson</groupId>
+		    <artifactId>jackson-core-asl</artifactId>
+		    <version>1.9.0</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.codehaus.jackson/jackson-xc -->
+		<dependency>
+		    <groupId>org.codehaus.jackson</groupId>
+		    <artifactId>jackson-xc</artifactId>
+		    <version>1.9.0</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.jaxrs/jackson-jaxrs-json-provider -->
+		<dependency>
+		    <groupId>com.fasterxml.jackson.jaxrs</groupId>
+		    <artifactId>jackson-jaxrs-json-provider</artifactId>
+		    <version>2.4.0</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-core -->
+		<dependency>
+		    <groupId>com.fasterxml.jackson.core</groupId>
+		    <artifactId>jackson-core</artifactId>
+		    <version>2.4.0</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson--->
+		<dependency>
+		    <groupId>com.fasterxml.jackson.core</groupId>
+		    <artifactId>jackson-annotations</artifactId>
+		    <version>2.4.0</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
+		<dependency>
+		    <groupId>com.fasterxml.jackson.core</groupId>
+		    <artifactId>jackson-databind</artifactId>
+		    <version>2.4.0</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.jaxrs/jackson-jaxrs-base -->
+		<dependency>
+		    <groupId>com.fasterxml.jackson.jaxrs</groupId>
+		    <artifactId>jackson-jaxrs-base</artifactId>
+		    <version>2.4.0</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.apache.cxf/cxf-rt-rs-security-cors -->
+		<dependency>
+		    <groupId>org.apache.cxf</groupId>
+		    <artifactId>cxf-rt-rs-security-cors</artifactId>
+		    <version>3.0.4</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.apache.cxf/cxf-rt-frontend-jaxrs -->
+		<dependency>
+		    <groupId>org.apache.cxf</groupId>
+		    <artifactId>cxf-rt-frontend-jaxrs</artifactId>
+		    <version>3.0.4</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.bouncycastle/bcprov-jdk15on -->
+		<dependency>
+		    <groupId>org.bouncycastle</groupId>
+		    <artifactId>bcprov-jdk15on</artifactId>
+		    <version>1.53</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.bouncycastle/bcpkix-jdk15on -->
+		<dependency>
+		    <groupId>org.bouncycastle</groupId>
+		    <artifactId>bcpkix-jdk15on</artifactId>
+		    <version>1.53</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/net.jcip/jcip-annotations -->
+		<dependency>
+		    <groupId>net.jcip</groupId>
+		    <artifactId>jcip-annotations</artifactId>
+		    <version>1.0</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/com.nimbusds/nimbus-jose-jwt -->
+		<dependency>
+		    <groupId>com.nimbusds</groupId>
+		    <artifactId>nimbus-jose-jwt</artifactId>
+		    <version>4.12</version>
+		</dependency>
                 <!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
                 <dependency>
                     <groupId>com.google.code.gson</groupId>
@@ -175,7 +253,7 @@
         <dependency>
             <groupId>net.minidev</groupId>
             <artifactId>json-smart</artifactId>
-            <version>2.1.1</version>
+            <version>1.3.1</version>
         </dependency>
         <!-- https://mvnrepository.com/artifact/net.minidev/asm -->
         <dependency>
@@ -183,14 +261,6 @@
             <artifactId>asm</artifactId>
             <version>1.0.2</version>
         </dependency>
-<!-- https://mvnrepository.com/artifact/com.nimbusds/nimbus-jose-jwt -->
-	<dependency>
-	    <groupId>com.nimbusds</groupId>
-	    <artifactId>nimbus-jose-jwt</artifactId>
-	    <version>5.0</version>
-	</dependency>
-        
-    </dependencies>
     <repositories>
         <repository>
             <id>maven-central-repo</id>
