--- a/pom.xml
+++ b/pom.xml
@@ -261,6 +261,14 @@
             <artifactId>asm</artifactId>
             <version>1.0.2</version>
         </dependency>
+	 <!-- https://mvnrepository.com/artifact/org.apache.camel/camel-velocity -->
+	<dependency>
+	    <groupId>org.apache.camel</groupId>
+	    <artifactId>camel-velocity</artifactId>
+	    <version>2.15.1</version>
+	</dependency>
+    </dependencies>
+	    
     <repositories>
         <repository>
             <id>maven-central-repo</id>
